After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 644355 - credits toggle inconsintency
credits toggle inconsintency
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: Other
3.0.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2011-03-09 23:28 UTC by Magnus Bergman
Modified: 2011-03-12 18:44 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Magnus Bergman 2011-03-09 23:28:42 UTC
If the help dialog is closed while the credits toggle is on the dialog becomes inconsistent the next time it's displayed: The toggle button is still active but the credits are not displayed. The expected behaviour is either that the credits are still displayed (the state the dialog was in then it was closet) or that the toggle button is not active (the state the dialog was in the first time it was displayed).
Comment 1 Matthias Clasen 2011-03-12 18:44:32 UTC
This problem has been fixed in our software repository. The fix will go into the next software release. Thank you for your bug report.